assets/scss/sidebar.scss
.el-menu {
    a.menu-item {
      display: inline-block;
      width: 100%;
      overflow: hidden;
    }
  
    .svg-icon {
      margin-right: 16px;
    }
    .sub-el-icon {
      margin-right: 12px;
      margin-left: -2px;
    }
  
    .el-menu-item i {
      margin-right: 0px;
    }
  
    .nest-menu .el-submenu > .el-submenu__title,
    .el-menu-item,
    .el-menu-item:not(.is-active) i {
      color: $menuText;
      margin-right: 0px;
  
      &:hover {
        // you can use $subMenuHover
        background-color: $menuHover !important;
      }
    }
  
    // the scroll bar appears when the subMenu is too long
    > .el-menu--popup {
      max-height: 100vh;
      overflow-y: auto;
  
      &::-webkit-scrollbar-track-piece {
        background: #d3dce6;
      }
  
      &::-webkit-scrollbar {
        width: 6px;
      }
  
      &::-webkit-scrollbar-thumb {
        background: #99a9bf;
        border-radius: 20px;
      }
    }
  }
  
  .sidebar-container {
    transition: transform 0.28s, width 0.28s;
    width: $sideBarWidth !important;
    background-color: $menuBg;
    height: 100%;
    position: fixed;
    font-size: 0px;
    top: 0;
    bottom: 0;
    left: 0;
    z-index: 1001;
    overflow: hidden;
    border-right: solid 1px #e6e6e6;
  
    .el-scrollbar {
      z-index: 1;
      background-color: $menuBg;
    }
  
    .svg-icon {
      margin-right: 5px;
      width: 24px;
    }
  
    .sub-el-icon {
      margin-right: 12px;
      margin-left: -2px;
    }
  
    &.collapsed {
      width: $sidebarCollapsed !important;
      .el-submenu > .el-submenu__title,
      .el-menu-item,
      .el-menu-item .el-tooltip {
        width: $sidebarCollapsed !important;
        padding: 0 !important;
        text-align: center;
      }
      .svg-icon {
        margin-right: 0px;
        width: 24px;
      }
    }
  
    .el-scrollbar {
      height: 100%;
      .el-scrollbar__wrap {
        overflow-x: hidden !important;
      }
    }
  
    .el-menu {
      border: none;
      height: 100%;
      width: 100% !important;
    }
  
    & .el-submenu .el-menu-item-group__title {
      min-width: $sideBarWidth !important;
      background-color: $subMenuBg !important;
    }
  
    & .nest-menu .el-submenu > .el-submenu__title,
    & .el-submenu .el-menu-item {
      min-width: $sideBarWidth !important;
      background-color: $subMenuBg !important;
  
      &:hover {
        background-color: $subMenuHover !important;
      }
    }
  
    a,
    a:focus,
    a:hover {
      cursor: pointer;
      display: inline-block;
      width: 100%;
      overflow: hidden;
      color: inherit;
      text-decoration: none;
    }
  
    // Hidden sidebar
    .hideSidebar {
      .sidebar-container {
        width: 54px !important;
      }
  
      .main-container {
        margin-left: 54px;
      }
  
      .submenu-title-noDropdown {
        padding: 0 !important;
        position: relative;
  
        .el-tooltip {
          padding: 0 !important;
  
          .svg-icon {
            margin-left: 20px;
          }
  
          .sub-el-icon {
            margin-left: 19px;
          }
        }
      }
  
      .el-submenu {
        overflow: hidden;
  
        & > .el-submenu__title {
          padding: 0 !important;
  
          .svg-icon {
            margin-left: 20px;
          }
  
          .sub-el-icon {
            margin-left: 19px;
          }
  
          .el-submenu__icon-arrow {
            display: none;
          }
        }
      }
  
      .el-menu--collapse {
        .el-submenu {
          & > .el-submenu__title {
            & > span {
              height: 0;
              width: 0;
              overflow: hidden;
              visibility: hidden;
              display: inline-block;
            }
          }
        }
      }
    }
  }
  
  .is-mobile.collapsed {
    .sidebar-container {
      transform: translateX(-100%);
      .mask {
        display: none;
      }
    }
  }
  
  .is-mobile .sidebar-container .mask {
    height: 100vh;
    width: 100vw;
    background-color: #0000004b;
    position: fixed;
    top: 0;
    left: 0;
  }
  

